@@ -1,0 +1,4 @@
+from decimal import Decimal
+from typing import Union
+
+ConfigValueType = Union[bool, Decimal, float, int, list, str]
