@@ -1,20 +1,27 @@
-import logging
-from typing import Union, List, Optional
+"""
+The manager module implements a ProviderManager, which manages configuration
+providers for a ConfigurationRegistry.
+"""
 
-from cfitall.cftypes import ConfigProviderType
+import logging
+from typing import Union, Optional, Sequence
+
+from cfitall.providers.base import ConfigProviderBase
 
 logger = logging.getLogger(__name__)
 
 
 class ProviderManager:
-    def __init__(self, providers: list[ConfigProviderType] = None) -> None:
+    def __init__(
+        self, providers: Optional[Sequence[ConfigProviderBase]] = None
+    ) -> None:
         """
         The ProviderManager manages configuration providers, handling registration,
         deregistration and ordering.
 
         :param providers: optional list of preconfigured providers to manage
         """
-        self.ordering: List[str] = []
+        self.ordering: Sequence[str] = []
         if not providers:
             providers = []
         for provider in providers:
@@ -23,13 +30,13 @@ class ProviderManager:
     def __repr__(self) -> str:
         return str(self.ordering)
 
-    def get(self, name: str) -> Union[ConfigProviderType, None]:
+    def get(self, name: str) -> Union[ConfigProviderBase, None]:
         try:
             return getattr(self, name)
         except AttributeError:
             return None
 
-    def register(self, provider: ConfigProviderType) -> None:
+    def register(self, provider: ConfigProviderBase) -> None:
         if not hasattr(self, provider.provider_name):
             setattr(self, provider.provider_name, provider)
             self.ordering.append(provider.provider_name)
@@ -46,7 +53,7 @@ class ProviderManager:
     def update_all(self) -> None:
         for provider_name in self.ordering:
             try:
-                provider: Optional[ConfigProviderType] = self.get(provider_name)
+                provider: Optional[ConfigProviderBase] = self.get(provider_name)
                 if provider and not provider.update():
                     logger.error(f"provider {provider} failed to update!")
             except AttributeError:
