@@ -1,5 +1,4 @@
-# noinspection PyUnresolvedReferences
-# from cfitall.providers.filesystem import FilesystemProvider
-
-# noinspection PyUnresolvedReferences
-# from cfitall.providers.environment import EnvironmentProvider
+"""
+The providers package contains modules for providing configuration data to a
+ConfigurationRegistry. Providers are managed by the ProviderManager.
+"""
