@@ -1,0 +1,24 @@
+.. cfitall documentation master file, created by
+   sphinx-quickstart on Sun Apr 10 07:34:48 2022.
+   You can adapt this file completely to your liking, but it should at least
+   contain the root `toctree` directive.
+
+Welcome to cfitall's documentation!
+===================================
+
+.. toctree::
+   :hidden:
+
+   Home <self>
+   API Docs <_autosummary/cfitall>
+
+
+
+Indices and tables
+==================
+
+* :ref:`genindex`
+* :ref:`modindex`
+* :ref:`search`
+
+
